responsive fix for translation flag overlapping lemma text

--- a/client/style/globals/responsive.import.less
+++ b/client/style/globals/responsive.import.less
@@ -60,9 +60,12 @@
 }
 
 @media screen and (max-width: 1300px) {
-
 	.navbar-header {
 		float: none;
+	}
+
+	.translation-available-flag {
+		display: none;
 	}
 }
 
